// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`G 1`] = `
<g
  class="silky-group "
  transform=" "
>
  foo
</g>
`;

exports[`Group width transform rotate 1`] = `
<g
  class="silky-group "
  transform=" rotate(10 20, 30)"
>
  foo
</g>
`;

exports[`Group width transform translate 1`] = `
<g
  class="silky-group "
  transform="translate(10, 10) "
>
  foo
</g>
`;

exports[`Group width transform translate and rotate 1`] = `
<g
  class="silky-group "
  transform="translate(10, 10) rotate(90)"
>
  foo
</g>
`;

exports[`Group with Emotion 1`] = `
.emotion-0 {
  color: black;
}

<g
  class="silky-group emotion-0"
  transform=" "
>
  foo
</g>
`;

exports[`Group with custom class 1`] = `
<g
  class="silky-group foo"
  transform=" "
>
  foo
</g>
`;
